# gerritoscopy

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  entrypoint.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: gerrit.rs  hosts.rs  lib.rs  main.rs  stats.rs
src/render/: markdown.rs  mod.rs  svg.rs
