[package]
name = "gerritoscopy"
version = "0.1.0"
edition = "2021"
description = "Fetch Gerrit contribution data and render a GitHub-profile heatmap card"
license = "MIT"

[[bin]]
name = "gerritoscopy"
path = "src/main.rs"

[dependencies]
anyhow   = "1"
chrono   = { version = "0.4", features = ["serde"] }
clap     = { version = "4", features = ["derive"] }
minijinja = "2"
reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio    = { version = "1", features = ["full"] }
